# robotics-labs

./: .gitignore  README.md
lab4/beginner_tutorials/: CMakeLists.txt
lab4/beginner_tutorials/scripts/: achiever.py
lab5/labrob_detector/: CMakeLists.txt  package.xml
lab5/labrob_detector/scripts/: yolo_detector.py  yolo_template.py
lab6/learning_tf2/: CMakeLists.txt
lab6/learning_tf2/launch/: record_robot.launch
lab6/learning_tf2/scripts/: walking_robot_listener.py
